--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,15 @@
             <version>6.10.0</version>
         </dependency>
         <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.11</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <scope>provided</scope>
+            <version>1.8.24</version>
         </dependency>
     </dependencies>
 
