--- a/deployments/memory/zxf-java-memory-deployment.yaml
+++ b/deployments/memory/zxf-java-memory-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: zxf-java-memory-app
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
       app: zxf-java-memory-app
@@ -15,8 +15,9 @@ spec:
         app: zxf-java-memory-app
     spec:
       containers:
-        - name: zxf-java-memory-app-container
+        - name: zxf-java-memory-app
           image: zxf-java-memory-app:latest
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
           env:
@@ -34,7 +35,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: zxf-java-memory-service
+  name: zxf-java-memory-app
   labels:
     app: zxf-java-memory-app
 spec:
